--- a/css/index_style.css
+++ b/css/index_style.css
@@ -1,126 +1,88 @@
-#all_simulate {
-    position: relative;
+.all-simulate {
     height: 500px;
-    left: 54%;
-    top: 170px;
-}
-
-.all {
-    width: 100%;
-}
-
-#logo {
     position: relative;
-    height: 65px;
-    right: 34.9%;
-    bottom: 400px;
+    left: 55%;
+    top: 130px;
 }
 
-#header {
-    position: relative;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-weight: 550;
-    font-size: 44.5px;
-    color: #57837a;
-    left: 10.3%;
-    bottom: 280px;
-    letter-spacing: 4px;
-}
-
-#subheader {
-    position: relative;
-    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 500;
-    font-size: 44.5px;
-    left: 10.1%;
-    bottom: 310px;
-} 
-
-#subheader2 {
-    position: relative;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    left: 10.1%;
-    bottom: 240px;
-    line-height: 30px;
-}
-
-#maincontent {
-    position: relative;
-    bottom: 100px;
-}
-
-#downloadcontent {
-    position: relative;
-    bottom: 30px;
-}
-
-#applestore {
-    position: relative;
-    height: 70px;
-    right: 52.9%;
-    top: 80px;
-}
-
-#googleplay {
-    position: relative;
-    height: 63px;
-    top: 170px;
-    right: 67.1%;
-}
-
-#privacypolicy {
-    position: relative;
-    left: 92%;
-    bottom: 650px;
-    font-weight: 100;
-    font-size: 25px;
-    transition: all .4s ease;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
-#privacypolicy:hover {
-    color: darkgreen;
-    cursor: pointer;
-}
-
-#aboutus {
-    position: relative;
-    bottom: 696px;
-    left: 81.3%;
-    font-weight: 100;
-    font-size: 25px;
-    transition: all .4s ease;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    
-}
-
-#aboutus:hover {
-    color: darkgreen;
-    cursor: pointer;
-}
-
-#home {
-    position: relative;
-    bottom: 743px;
-    left: 72%;
-    font-weight: 100;
-    font-size: 25px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    opacity: 10;
-    transition: all .4s ease;
-}
-
-#home:hover {
-    color: darkgreen;
-    cursor: pointer;
-    
-}
-
-#feature1 {
-    font-weight: lighter;
-    font-family: Arial, Helvetica, sans-serif;
+.sub-title {
     font-size: 20px;
+    font-family: inherit;
     position: relative;
-    left: 10%;
+    left: 11%;
+    bottom: 350px;
+}
+
+.logo {
+    position: relative;
+    right: 40%;
+    height: 80px;
+    bottom: 150px;
+}
+
+.install-welcome {
+    position: relative;
+    left: 4.5%;
+    bottom: 200px;
+    font-size: 20px;
+}
+
+.dl {
+    position: relative;
+    height: 60px;
+    right: 61.9%;
+    top: 190px;
+}
+
+#text-f1 {
+    position: relative;
+    font-size: 25px;
+    top: 230px;
+    left: 30%;
+}
+
+.img-f1 {
+    position: relative;
+    height: 250px;
+    left: 5%;
+    top: 50px;
+}
+
+.img-f2 {
+    position: relative;
+    height: 250px;
+    left: 80%;
     top: 100px;
+}
+
+#text-f2 {
+    position: relative;
+    top: 230px;
+    left: 45%;
+    font-size: 25px;
+}
+
+.img-f3 {
+    position: relative;
+    height: 250px;
+    top: 160px;
+    left: 5%;
+}
+
+#text-f3 {
+    position: relative;
+    top: 310px;
+    left: 30%;
+}
+
+.second-page {
+    position: relative;
+    top: 200px;
+}
+
+#about-app {
+    position: relative;
+    text-align: center;
+    font-size: 20px;
+    bottom: 750px;
 }
